--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^7.0.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
@@ -42,6 +43,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "core-js": "^3.19.3",
+    "dotenv": "^10.0.0",
     "normalize.css": "^8.0.1"
   }
 }
