--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.0",
+    "remove-files-webpack-plugin": "^1.5.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.0",
