--- a/custom-video/package.json
+++ b/custom-video/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "webpack serve --env mode=development submode=serve",
     "build": "webpack --env mode=production",
+    "build-dev": "webpack --config ./webpack.config.dev.js --env mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tretyakov Alexander (tpetyakov@gmail.com)",
